--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,113 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Steps {
+  position: absolute;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  align-content: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  width: 100%;
+  height: 100%;
+  font-size: 20px;
+  font-weight: 500;    
+  background-color: #d6e9ff;
+}
+
+.Steps__container {
+  padding: 30px 60px 60px 60px;
+  background-color: #b9cee6;
+  border-radius: 20px;   
+}
+
+.StepsForm {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-end;
+}
+
+
+.StepsList {
+  padding-top: 10px;
+}
+
+.control {
+  display: inline;
+  margin: 10px;
+}
+
+.control label {
+  display: block;
+  font-size: 20px;
+  font-weight: 500;
+  padding: 8px;
+}
+
+
+.control input {
+  height: 40px;
+  margin-bottom: 6px;
+  padding-top: 8px;   
+  padding-bottom: 8px;
+  padding-left: 16px;
+  padding-right: 16px;
+  font-size: 20px;
+  font-weight: 500;
+  border-style: none;
+  background-color: white;
+  border-radius: 8px;
+}
+
+.control button {
+  padding: 16px;
+  margin-bottom: 6px;
+  height: 56px; 
+  text-transform: uppercase;
+  font-size: 20px;
+  font-weight: 500;
+  background-color: #c5c5c5;
+  border-style: solid;
+  border-radius: 8px;
+  border-width: thin;
+  cursor: pointer;
+}
+
+.control button:hover {
+  background-color: #a9a9a9;
+}
+
+.StepsList {
+  width: 100%;
+}
+
+.StepsList table {
+  width: 100%;
+  border-radius: 10px;
+  border-spacing: 0;
+  border-style: solid;
+  padding: 16px 16px 26px 16px;
+}
+
+.StepsList table th, .StepsList table td {
+  text-align: center;
+  vertical-align: middle;
+  padding-top: 8px;
+  padding-bottom: 8px;
+}
+
+.color-box__color-rbg {
+  height: 60px;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  font-weight: 500;
+   background: rgba(23, 20, 20, 0.5);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Errors {
+  color: white;
+  background-color: #ed4a4a;  
+  border-style: none;
+  border-radius: 8px; 
+  padding: 10px; 
 }
